refactor: add memberDto data in story retrieval